--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@sveltejs/kit": "^1.20.4",
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "@tailwindcss/typography": "^0.5.10",
+    "@types/gtag.js": "^0.0.14",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
     "autoprefixer": "^10.4.15",
