--- a/.prettierrc
+++ b/.prettierrc
@@ -3,5 +3,7 @@
   "trailingComma": "none",
   "printWidth": 70,
   "plugins": ["prettier-plugin-svelte"],
-  "overrides": [{ "files": "*.svelte", "options": { "parser": "svelte" } }]
+  "overrides": [
+    { "files": "*.svelte", "options": { "parser": "svelte" } }
+  ]
 }
