--- a/package.json
+++ b/package.json
@@ -25,8 +25,9 @@
     "eslint-plugin-svelte": "^2.30.0",
     "mdsvex": "^0.11.0",
     "postcss": "^8.4.29",
-    "prettier": "^2.8.0",
+    "prettier": "^2.8.8",
     "prettier-plugin-svelte": "^2.10.1",
+    "prettier-plugin-tailwindcss": "^0.4.1",
     "svelte": "^4.0.5",
     "svelte-check": "^3.4.3",
     "tailwindcss": "^3.3.3",
@@ -38,7 +39,6 @@
   "type": "module",
   "dependencies": {
     "escape-html": "^1.0.3",
-    "prettier": "^3.0.3",
     "prismjs": "^1.29.0",
     "shiki": "^0.14.4",
     "shiki-themes": "^0.2.7"
