Added giscus commenting section to blog posts

--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
   },
   "type": "module",
   "dependencies": {
+    "@giscus/svelte": "^2.3.0",
     "escape-html": "^1.0.3",
     "prismjs": "^1.29.0",
     "shiki": "^0.14.4",
