--- a/package.json
+++ b/package.json
@@ -9,9 +9,14 @@
     "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
     "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
     "lint": "prettier --plugin-search-dir . --check . && eslint .",
-    "format": "prettier --plugin-search-dir . --write ."
+    "format": "prettier --plugin-search-dir . --write .",
+    "generate-migrations": "drizzle-kit generate:pg",
+    "studio": "drizzle-kit studio",
+    "migrate": "tsx db/migrate",
+    "seed": "tsx db/seed"
   },
   "devDependencies": {
+    "@faker-js/faker": "^8.4.1",
     "@sveltejs/adapter-auto": "^2.0.0",
     "@sveltejs/kit": "^1.20.4",
     "@tailwindcss/aspect-ratio": "^0.4.2",
@@ -20,10 +25,12 @@
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
     "autoprefixer": "^10.4.15",
+    "drizzle-kit": "^0.20.14",
     "eslint": "^8.28.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-svelte": "^2.30.0",
     "mdsvex": "^0.11.0",
+    "pg": "^8.11.5",
     "postcss": "^8.4.29",
     "prettier": "^2.8.8",
     "prettier-plugin-svelte": "^2.10.1",
@@ -32,6 +39,7 @@
     "svelte-check": "^3.4.3",
     "tailwindcss": "^3.3.3",
     "tslib": "^2.4.1",
+    "tsx": "^4.7.2",
     "typescript": "^5.0.0",
     "typescript-svelte-plugin": "^0.3.31",
     "vite": "^4.4.2"
@@ -39,7 +47,10 @@
   "type": "module",
   "dependencies": {
     "@giscus/svelte": "^2.3.0",
+    "dotenv": "^16.4.5",
+    "drizzle-orm": "^0.30.7",
     "escape-html": "^1.0.3",
+    "postgres": "^3.4.4",
     "prismjs": "^1.29.0",
     "shiki": "^0.14.4",
     "shiki-themes": "^0.2.7"
