--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
     "format": "prettier --plugin-search-dir . --write .",
     "generate-migrations": "drizzle-kit generate:pg",
     "studio": "drizzle-kit studio",
-    "migrate": "tsx db/migrate",
-    "seed": "tsx db/seed"
+    "migrate": "tsx src/lib/server/db/migrate",
+    "seed": "tsx src/lib/server/db/seed"
   },
   "devDependencies": {
     "@faker-js/faker": "^8.4.1",
@@ -22,15 +22,19 @@
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "@tailwindcss/typography": "^0.5.10",
     "@types/gtag.js": "^0.0.14",
-    "@typescript-eslint/eslint-plugin": "^6.0.0",
-    "@typescript-eslint/parser": "^6.0.0",
+    "@types/pluralize": "^0.0.33",
+    "@typescript-eslint/eslint-plugin": "^7.8.0",
+    "@typescript-eslint/parser": "^7.8.0",
     "autoprefixer": "^10.4.15",
-    "drizzle-kit": "^0.20.14",
-    "eslint": "^8.28.0",
-    "eslint-config-prettier": "^8.5.0",
-    "eslint-plugin-svelte": "^2.30.0",
+    "dayjs": "^1.11.11",
+    "drizzle-kit": "^0.20.17",
+    "drizzle-orm": "^0.30.10",
+    "eslint": "^8.57.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-svelte": "^2.38.0",
     "mdsvex": "^0.11.0",
     "pg": "^8.11.5",
+    "pluralize": "^8.0.0",
     "postcss": "^8.4.29",
     "prettier": "^2.8.8",
     "prettier-plugin-svelte": "^2.10.1",
@@ -40,7 +44,7 @@
     "tailwindcss": "^3.3.3",
     "tslib": "^2.4.1",
     "tsx": "^4.7.2",
-    "typescript": "^5.0.0",
+    "typescript": "^5.4.5",
     "typescript-svelte-plugin": "^0.3.31",
     "vite": "^4.4.2"
   },
@@ -48,7 +52,6 @@
   "dependencies": {
     "@giscus/svelte": "^2.3.0",
     "dotenv": "^16.4.5",
-    "drizzle-orm": "^0.30.7",
     "escape-html": "^1.0.3",
     "postgres": "^3.4.4",
     "prismjs": "^1.29.0",
