--- a/package.json
+++ b/package.json
@@ -26,8 +26,9 @@
     "@typescript-eslint/eslint-plugin": "^7.8.0",
     "@typescript-eslint/parser": "^7.8.0",
     "autoprefixer": "^10.4.15",
+    "clsx": "^2.1.1",
     "dayjs": "^1.11.11",
-    "drizzle-kit": "^0.20.18",
+    "drizzle-kit": "^0.22.7",
     "drizzle-orm": "^0.30.10",
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
@@ -41,6 +42,7 @@
     "prettier-plugin-tailwindcss": "^0.4.1",
     "svelte": "^4.0.5",
     "svelte-check": "^3.4.3",
+    "tailwind-merge": "^2.3.0",
     "tailwindcss": "^3.3.3",
     "tslib": "^2.4.1",
     "tsx": "^4.7.2",
