--- a/package.json
+++ b/package.json
@@ -10,10 +10,11 @@
     "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
     "lint": "prettier --plugin-search-dir . --check . && eslint .",
     "format": "prettier --plugin-search-dir . --write .",
-    "generate-migrations": "drizzle-kit generate:pg",
-    "studio": "drizzle-kit studio",
-    "migrate": "tsx src/lib/server/db/migrate",
-    "seed": "tsx src/lib/server/db/seed"
+    "drizzle:generate": "drizzle-kit generate",
+    "drizzle:studio": "drizzle-kit studio",
+    "drizzle:migrate": "tsx src/lib/server/db/migrate",
+    "drizzle:seed": "tsx src/lib/server/db/seed",
+    "drizzle:up": "drizzle-kit up"
   },
   "devDependencies": {
     "@faker-js/faker": "^8.4.1",
@@ -29,7 +30,7 @@
     "clsx": "^2.1.1",
     "dayjs": "^1.11.11",
     "drizzle-kit": "^0.22.7",
-    "drizzle-orm": "^0.30.10",
+    "drizzle-orm": "^0.31.4",
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-svelte": "^2.38.0",
