--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@typescript-eslint/eslint-plugin": "^7.8.0",
     "@typescript-eslint/parser": "^7.8.0",
     "autoprefixer": "^10.4.15",
+    "bits-ui": "^0.21.12",
     "clsx": "^2.1.1",
     "dayjs": "^1.11.11",
     "drizzle-kit": "^0.22.7",
