--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
   "type": "module",
   "dependencies": {
     "@giscus/svelte": "^2.3.0",
+    "@tailwindcss/forms": "^0.5.7",
     "dotenv": "^16.4.5",
     "escape-html": "^1.0.3",
     "postgres": "^3.4.4",
