--- a/package.json
+++ b/package.json
@@ -44,13 +44,15 @@
     "prettier-plugin-tailwindcss": "^0.4.1",
     "svelte": "^4.0.5",
     "svelte-check": "^3.4.3",
+    "sveltekit-superforms": "^2.16.0",
     "tailwind-merge": "^2.3.0",
     "tailwindcss": "^3.3.3",
     "tslib": "^2.4.1",
     "tsx": "^4.7.2",
     "typescript": "^5.4.5",
     "typescript-svelte-plugin": "^0.3.31",
-    "vite": "^4.4.2"
+    "vite": "^4.4.2",
+    "zod": "^3.23.8"
   },
   "type": "module",
   "dependencies": {
