--- a/package.json
+++ b/package.json
@@ -39,10 +39,10 @@
     "pg": "^8.11.5",
     "pluralize": "^8.0.0",
     "postcss": "^8.4.29",
-    "prettier": "^2.8.8",
-    "prettier-plugin-svelte": "^2.10.1",
+    "prettier": "^3.3.3",
+    "prettier-plugin-svelte": "^3.2.6",
     "prettier-plugin-tailwindcss": "^0.4.1",
-    "svelte": "^4.0.5",
+    "svelte": "^4.2.18",
     "svelte-check": "^3.4.3",
     "sveltekit-superforms": "^2.16.0",
     "tailwind-merge": "^2.3.0",
@@ -60,6 +60,7 @@
     "@tailwindcss/forms": "^0.5.7",
     "dotenv": "^16.4.5",
     "escape-html": "^1.0.3",
+    "formsnap": "^1.0.1",
     "postgres": "^3.4.4",
     "prismjs": "^1.29.0",
     "shiki": "^0.14.4",
