Updated postgres version and fixed issue retrieving PostgresError

--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "format": "prettier --plugin-search-dir . --write .",
     "drizzle:generate": "drizzle-kit generate",
     "drizzle:studio": "drizzle-kit studio",
-    "drizzle:migrate": "tsx src/lib/server/db/migrate",
+    "drizzle:migrate": "drizzle-kit migrate",
     "drizzle:seed": "tsx src/lib/server/db/seed",
     "drizzle:up": "drizzle-kit up"
   },
@@ -28,18 +28,18 @@
     "@typescript-eslint/eslint-plugin": "^7.8.0",
     "@typescript-eslint/parser": "^7.8.0",
     "autoprefixer": "^10.4.15",
-    "bits-ui": "^0.21.12",
+    "bits-ui": "^2.8.11",
     "clsx": "^2.1.1",
     "dayjs": "^1.11.11",
-    "drizzle-kit": "^0.22.7",
-    "drizzle-orm": "^0.31.4",
+    "drizzle-kit": "^0.31.4",
+    "drizzle-orm": "^0.44.3",
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-svelte": "^2.45.1",
     "mdsvex": "^0.11.0",
-    "pg": "^8.11.5",
     "pluralize": "^8.0.0",
     "postcss": "^8.4.29",
+    "postgres": "^3.4.7",
     "prettier": "^3.3.3",
     "prettier-plugin-svelte": "^3.2.6",
     "prettier-plugin-tailwindcss": "^0.4.1",
@@ -62,9 +62,11 @@
     "dotenv": "^16.4.5",
     "escape-html": "^1.0.3",
     "formsnap": "^1.0.1",
-    "postgres": "^3.4.4",
     "prismjs": "^1.29.0",
     "shiki": "^0.14.4",
     "shiki-themes": "^0.2.7"
+  },
+  "engines": {
+    "node": "22.x"
   }
 }
