--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "postgres": "^3.4.4",
     "prismjs": "^1.29.0",
     "shiki": "^0.14.4",
-    "shiki-themes": "^0.2.7"
+    "shiki-themes": "^0.2.7",
+    "svelte-eslint-parser": "^1.3.0"
   }
 }
