--- a/package.json
+++ b/package.json
@@ -17,25 +17,26 @@
     "drizzle:up": "drizzle-kit up"
   },
   "devDependencies": {
+    "@eslint/js": "^9.32.0",
     "@faker-js/faker": "^8.4.1",
-    "@sveltejs/adapter-auto": "^3.0.0",
+    "@sveltejs/adapter-auto": "^6.0.1",
     "@sveltejs/kit": "^2.5.27",
     "@sveltejs/vite-plugin-svelte": "^4.0.0",
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "@tailwindcss/typography": "^0.5.10",
     "@types/gtag.js": "^0.0.14",
     "@types/pluralize": "^0.0.33",
-    "@typescript-eslint/eslint-plugin": "^7.8.0",
-    "@typescript-eslint/parser": "^7.8.0",
     "autoprefixer": "^10.4.15",
     "bits-ui": "^2.8.11",
     "clsx": "^2.1.1",
     "dayjs": "^1.11.11",
     "drizzle-kit": "^0.31.4",
     "drizzle-orm": "^0.44.3",
-    "eslint": "^8.57.0",
+    "eslint": "^9.32.0",
     "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-svelte": "^2.45.1",
+    "eslint-plugin-svelte": "^3.11.0",
+    "formsnap": "^2.0.1",
+    "globals": "^16.3.0",
     "mdsvex": "^0.11.0",
     "pluralize": "^8.0.0",
     "postcss": "^8.4.29",
@@ -45,15 +46,16 @@
     "prettier-plugin-tailwindcss": "^0.4.1",
     "svelte": "^5.0.0",
     "svelte-check": "^4.0.0",
-    "sveltekit-superforms": "^2.16.0",
+    "sveltekit-superforms": "^2.27.1",
     "tailwind-merge": "^2.3.0",
     "tailwindcss": "^3.3.3",
     "tslib": "^2.4.1",
     "tsx": "^4.7.2",
-    "typescript": "^5.5.0",
-    "typescript-svelte-plugin": "^0.3.31",
-    "vite": "^5.4.4",
-    "zod": "^3.23.8"
+    "typescript": "^5.8.3",
+    "typescript-eslint": "^8.38.0",
+    "typescript-svelte-plugin": "^0.3.49",
+    "vite": "^5.4.19",
+    "zod": "^3.25.76"
   },
   "type": "module",
   "dependencies": {
@@ -61,7 +63,6 @@
     "@tailwindcss/forms": "^0.5.7",
     "dotenv": "^16.4.5",
     "escape-html": "^1.0.3",
-    "formsnap": "^1.0.1",
     "prismjs": "^1.29.0",
     "shiki": "^0.14.4",
     "shiki-themes": "^0.2.7"
