--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "@giscus/svelte": "^2.3.0",
     "@tailwindcss/forms": "^0.5.7",
     "@types/pg": "^8.15.5",
+    "better-auth": "^1.3.7",
     "dotenv": "^16.4.5",
     "escape-html": "^1.0.3",
     "pg": "^8.16.3",
